# smart-contracts-halotrade-zone

./: Beaker.toml  Cargo.toml  README.md  tarpaulin-report.html
.beaker/: state.json
.circleci/: config.yml
contracts/halo-factory/: Cargo.toml  NOTICE  README.md
contracts/halo-factory/src/: contract.rs  state.rs  testing.rs
contracts/halo-pair/: Cargo.toml  README.md
contracts/halo-pair/examples/: schema.rs
contracts/halo-pair/src/: contract.rs  error.rs  lib.rs  state.rs  testing.rs
contracts/halo-router/: Cargo.toml  README.md
contracts/halo-router/src/: contract.rs  operations.rs  state.rs
contracts/halo-router/src/testing/: tests.rs
contracts/halo-token/: Cargo.toml  README.md
contracts/halo-token/examples/: schema.rs
contracts/halo-token/src/: contract.rs  env_setup.rs  integration_test.rs  lib.rs
cw-tests/: Cargo.toml
cw-tests/src/: environment.rs
cw-tests/tests/: factory_test.rs  pair_test.rs  token_test.rs
ts/sdk/: README.md  package.json  typedoc.json
