[package]
name = "tests"
version = "0.1.0"
authors = ["hoanm <mr.nmh175@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
haloswap = { path = "../packages/haloswap", default-features = false, version = "0.1.0"}
halo-token = { path = "../contracts/halo-token", default-features = false, version = "0.1.0"}
halo-pair = { path = "../contracts/halo-pair", default-features = false, version = "0.1.0"}
halo-router = { path = "../contracts/halo-router", default-features = false, version = "0.1.0"}
halo-factory = { path = "../contracts/halo-factory", default-features = false, version = "0.1.0"}
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.8"
cosmwasm-storage = "1.1.8"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
cw20 = "1.0.0"
cw20-base = {version = "1.0.0", features = ["library"]}
cw-multi-test = "0.16.1"
